# kobana-cli

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  SECURITY.md  flake.nix  gemini-extension.json
.github/workflows/: ci.yml
crates/kobana/: Cargo.toml
crates/kobana-cli/: Cargo.toml
crates/kobana-cli/specs/: v1.json  v2.json
crates/kobana-cli/src/: auth.rs  auth_commands.rs  commands.rs  completions.rs  config.rs  credential_store.rs  executor.rs  formatter.rs  logging.rs  main.rs  oauth.rs  pagination.rs  schema.rs  update.rs  validate.rs
crates/kobana-cli/src/helpers/: boleto.rs  mod.rs  pix.rs
crates/kobana/src/: client.rs  error.rs  lib.rs  spec.rs  validate.rs
docs/: cli-spec.md  demo.tape  design-principles.md  go-vs-rust.md  project-structure.md
skills/kobana-admin/: SKILL.md
skills/kobana-charge/: SKILL.md
skills/kobana-data/: SKILL.md
skills/kobana-financial/: SKILL.md
skills/kobana-mailbox/: SKILL.md
skills/kobana-payment/: SKILL.md
skills/kobana-security/: SKILL.md
skills/kobana-shared/: SKILL.md
skills/kobana-transfer/: SKILL.md
skills/kobana-v1/: SKILL.md
