[package]
name = "kobana-cli"
version = "0.2.2"
edition = "2021"
default-run = "kobana"

[[bin]]
name = "kobana"
path = "src/main.rs"

[dependencies]
kobana = { path = "../kobana" }
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
comfy-table = "7"
csv = "1"
aes-gcm = "0.10"
sha2 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
zeroize = "1"
base64 = "0.22"
rand = "0.9"
