[package]
name = "kobana"
version = "0.4.1"
edition = "2021"
description = "Kobana API client library"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["time", "fs"] }
tracing = "0.1"
percent-encoding = "2"
